tests/golden/snapshots/integration__golden__snapshot_tests__codex_prompt.snap
---
source: tests/golden/mod.rs
expression: "&prompt_output.content"
---
---
description: Generate tests for "foo" function
argument-hint: <arguments>
---

$ARGUMENTS

# Generate Tests

Check if variable is named "foo" and create tests.

Use $ARGUMENTS for input.

<!-- Generated by Calvin 0.3.0 (Adapter v1). Source: actions/generate-tests.md. DO NOT EDIT. -->
