tests/golden/snapshots/integration__golden__snapshot_tests__cursor_policy.snap
---
source: tests/golden/mod.rs
expression: "&policy_output.content"
---
<!-- Generated by Calvin 0.1.0 (Adapter v1). Source: policies/code-style.md. DO NOT EDIT. -->

---
description: Code style policy for consistent formatting
alwaysApply: true
---

# Code Style Policy

## Formatting Rules

1. Use 4 spaces for indentation
2. Maximum line length: 100 characters
3. Use trailing commas in multi-line structures
