tests/golden/snapshots/integration__golden__snapshot_tests__vscode_instructions.snap
---
source: tests/golden/mod.rs
expression: "&instr_output.content"
---
---
description: Code style policy for consistent formatting
---

# Code Style Policy

## Formatting Rules

1. Use 4 spaces for indentation
2. Maximum line length: 100 characters
3. Use trailing commas in multi-line structures

<!-- Generated by Calvin 0.3.0 (Adapter v1). Source: policies/code-style.md. DO NOT EDIT. -->
